<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#81AFA437">

    <EditText
        android:id="@+id/et_date_from"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_corner"
        app:layout_constraintEnd_toStartOf="@id/et_date_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/date_from"
        android:focusable="false"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_date_to"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_corner"
        app:layout_constraintEnd_toStartOf="@id/btn_search_ok"
        app:layout_constraintStart_toEndOf="@id/et_date_from"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusable="false"
        android:hint="@string/date_upon"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search_ok"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_date_to"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/color_primary_dark"
        android:text="@string/ok"
        android:fontFamily="@font/comediantdecor"
        android:textStyle="bold" />
</androidx.constraintlayout.widget.ConstraintLayout>
