<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:background="@drawable/background_fragment_gradient">

        <TextView
            android:id="@+id/tv_title_settings"
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/title_settings"
            app:layout_constraintBottom_toTopOf="@+id/tr_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableRow
            android:id="@+id/tr_settings"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_settings">
            <TextView
                android:id="@+id/tv_number_of_players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/players_amount_settings"
                android:textSize="16sp"
                android:fontFamily="@font/comediantdecor"
                tools:text="@string/players_amount_settings"
                />

            <Spinner
                android:id="@+id/sp_players"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:entries="@array/numberOfPlayers"
                android:pointerIcon="arrow"
                android:background="@color/color_on_article_bar"
                />
        </TableRow>

        <!--<com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_game_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/color_gray"
            app:layout_constraintBottom_toTopOf="@id/til_p1_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tr_settings">

            12<com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_gameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comediantdecor"
            android:hint="@string/game_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_p1_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/color_gray"
            app:layout_constraintBottom_toTopOf="@id/til_p2_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tr_settings">

            12<com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_playerOneName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comediantdecor"
                android:hint="@string/first_player_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_p2_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/color_gray"
            app:layout_constraintBottom_toTopOf="@+id/til_p3_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_p1_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_playerTwoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comediantdecor"
                android:hint="@string/second_player_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_p3_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/color_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_p2_name"
            app:layout_constraintBottom_toTopOf="@id/tv_cancel"
            app:layout_constraintVertical_chainStyle="spread">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_playerThreeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comediantdecor"
                android:hint="@string/third_player_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/continue_tv"
            style="@style/TextViewButtonFragment"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
            android:drawablePadding="6dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_cancel"
            />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/cancel_tv"
            style="@style/TextViewButtonFragment"
            android:drawableStart="@drawable/ic_baseline_arrow_back_24"
            android:drawablePadding="6dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_p3_name"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>